third_party/move/move-compiler-v2/tests/folding/unfoldable_constants.exp

Diagnostics:
error: Invalid expression in `const`. Operator shl (<<) result value out of range for u8
  ┌─ tests/folding/unfoldable_constants.move:3:22
  │
3 │     const SHL0: u8 = 1 << 8;
  │                      ^^^^^^

error: Invalid expression in `const`. Operator shl (<<) result value out of range for u64
  ┌─ tests/folding/unfoldable_constants.move:4:23
  │
4 │     const SHL1: u64 = 1 << 64;
  │                       ^^^^^^^

error: Invalid expression in `const`. Operator shl (<<) result value out of range for u128
  ┌─ tests/folding/unfoldable_constants.move:5:24
  │
5 │     const SHL2: u128 = 1 << 128;
  │                        ^^^^^^^^

error: Invalid expression in `const`. Operator shl (<<) result value out of range for u16
  ┌─ tests/folding/unfoldable_constants.move:6:23
  │
6 │     const SHL3: u16 = 1 << 16;
  │                       ^^^^^^^

error: Invalid expression in `const`. Operator shl (<<) result value out of range for u32
  ┌─ tests/folding/unfoldable_constants.move:7:23
  │
7 │     const SHL4: u32 = 1 << 32;
  │                       ^^^^^^^

error: Invalid expression in `const`. Operator div (/) result value out of range for u8
   ┌─ tests/folding/unfoldable_constants.move:27:22
   │
27 │     const DIV0: u8 = 1 / 0;
   │                      ^^^^^

error: Invalid expression in `const`. Operator div (/) result value out of range for u64
   ┌─ tests/folding/unfoldable_constants.move:28:23
   │
28 │     const DIV1: u64 = 1 / 0;
   │                       ^^^^^

error: Invalid expression in `const`. Operator div (/) result value out of range for u128
   ┌─ tests/folding/unfoldable_constants.move:29:24
   │
29 │     const DIV2: u128 = 1 / 0;
   │                        ^^^^^

error: Invalid expression in `const`. Operator div (/) result value out of range for u16
   ┌─ tests/folding/unfoldable_constants.move:30:23
   │
30 │     const DIV3: u16 = 1 / 0;
   │                       ^^^^^

error: Invalid expression in `const`. Operator div (/) result value out of range for u32
   ┌─ tests/folding/unfoldable_constants.move:31:23
   │
31 │     const DIV4: u32 = 1 / 0;
   │                       ^^^^^

error: Invalid expression in `const`. Operator div (/) result value out of range for u256
   ┌─ tests/folding/unfoldable_constants.move:32:24
   │
32 │     const DIV5: u256 = 1 / 0;
   │                        ^^^^^

error: Invalid expression in `const`. Operator rem (%) result value out of range for u8
   ┌─ tests/folding/unfoldable_constants.move:34:22
   │
34 │     const MOD0: u8 = 1 % 0;
   │                      ^^^^^

error: Invalid expression in `const`. Operator rem (%) result value out of range for u64
   ┌─ tests/folding/unfoldable_constants.move:35:23
   │
35 │     const MOD1: u64 = 1 % 0;
   │                       ^^^^^

error: Invalid expression in `const`. Operator rem (%) result value out of range for u128
   ┌─ tests/folding/unfoldable_constants.move:36:24
   │
36 │     const MOD2: u128 = 1 % 0;
   │                        ^^^^^

error: Invalid expression in `const`. Operator rem (%) result value out of range for u16
   ┌─ tests/folding/unfoldable_constants.move:37:23
   │
37 │     const MOD3: u16 = 1 % 0;
   │                       ^^^^^

error: Invalid expression in `const`. Operator rem (%) result value out of range for u32
   ┌─ tests/folding/unfoldable_constants.move:38:23
   │
38 │     const MOD4: u32 = 1 % 0;
   │                       ^^^^^

error: Invalid expression in `const`. Operator rem (%) result value out of range for u256
   ┌─ tests/folding/unfoldable_constants.move:39:24
   │
39 │     const MOD5: u256 = 1 % 0;
   │                        ^^^^^

error: Invalid expression in `const`. Operator add (+) result value out of range for u8
   ┌─ tests/folding/unfoldable_constants.move:29:22
   │
29 │     const ADD0: u8 = 255 + 255;
   │                      ^^^^^^^^^

error: Invalid expression in `const`. Operator add (+) result value out of range for u64
   ┌─ tests/folding/unfoldable_constants.move:30:23
   │
30 │     const ADD1: u64 = 18446744073709551615 + 18446744073709551615;
   │                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator add (+) result value out of range for u128
   ┌─ tests/folding/unfoldable_constants.move:32:9
   │
32 │         340282366920938463463374607431768211450 + 340282366920938463463374607431768211450;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator add (+) result value out of range for u16
   ┌─ tests/folding/unfoldable_constants.move:33:23
   │
33 │     const ADD3: u16 = 65535 + 65535;
   │                       ^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator add (+) result value out of range for u32
   ┌─ tests/folding/unfoldable_constants.move:34:23
   │
34 │     const ADD4: u32 = 4294967295 + 4294967295;
   │                       ^^^^^^^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator add (+) result value out of range for u256
   ┌─ tests/folding/unfoldable_constants.move:36:9
   │
36 │         115792089237316195423570985008687907853269984665640564039457584007913129639935 + 115792089237316195423570985008687907853269984665640564039457584007913129639935;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator shl (<<) result value out of range for u32
   ┌─ tests/folding/unfoldable_constants.move:13:25
   │
13 │     const SHL4B: u64 = ((1u32 << 32) as u64);
   │                         ^^^^^^^^^^^^

error: Invalid expression in `const`. Parameter to unary expression not foldable to constant
   ┌─ tests/folding/unfoldable_constants.move:21:24
   │
21 │     const SHR0B: u32 = ((0u8 >> 8) as u32);
   │                        ^^^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Parameter to unary expression not foldable to constant
   ┌─ tests/folding/unfoldable_constants.move:22:25
   │
22 │     const SHR1B: u128 = ((0u64 >> 64) as u128);
   │                         ^^^^^^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Parameter to unary expression not foldable to constant
   ┌─ tests/folding/unfoldable_constants.move:23:25
   │
23 │     const SHR2B: u256 = ((0u128 >> 128) as u256);
   │                         ^^^^^^^^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Parameter to unary expression not foldable to constant
   ┌─ tests/folding/unfoldable_constants.move:24:24
   │
24 │     const SHR3B: u32 = ((0u16 >> 16) as u32);
   │                        ^^^^^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Parameter to unary expression not foldable to constant
   ┌─ tests/folding/unfoldable_constants.move:25:24
   │
25 │     const SHR4B: u64 = ((0u32 >> 32) as u64);
   │                        ^^^^^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Operator sub (-) result value out of range for u8
   ┌─ tests/folding/unfoldable_constants.move:69:22
   │
69 │     const SUB0: u8 = 0 - 1;
   │                      ^^^^^

error: Invalid expression in `const`. Operator sub (-) result value out of range for u64
   ┌─ tests/folding/unfoldable_constants.move:70:23
   │
70 │     const SUB1: u64 = 0 - 1;
   │                       ^^^^^

error: Invalid expression in `const`. Operator sub (-) result value out of range for u128
   ┌─ tests/folding/unfoldable_constants.move:71:24
   │
71 │     const SUB2: u128 = 0 - 1;
   │                        ^^^^^

error: Invalid expression in `const`. Operator sub (-) result value out of range for u16
   ┌─ tests/folding/unfoldable_constants.move:72:23
   │
72 │     const SUB3: u16 = 0 - 1;
   │                       ^^^^^

error: Invalid expression in `const`. Operator sub (-) result value out of range for u32
   ┌─ tests/folding/unfoldable_constants.move:73:23
   │
73 │     const SUB4: u32 = 0 - 1;
   │                       ^^^^^

error: Invalid expression in `const`. Operator sub (-) result value out of range for u256
   ┌─ tests/folding/unfoldable_constants.move:74:24
   │
74 │     const SUB5: u256 = 0 - 1;
   │                        ^^^^^

error: Invalid expression in `const`. Cast argument value 256 out of range for type u8
   ┌─ tests/folding/unfoldable_constants.move:45:23
   │
45 │     const CAST0: u8 = ((256: u64) as u8);
   │                       ^^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Cast argument value 340282366920938463463374607431768211450 out of range for type u64
   ┌─ tests/folding/unfoldable_constants.move:46:24
   │
46 │     const CAST1: u64 = ((340282366920938463463374607431768211450: u128) as u64);
   │                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Cast argument value 340282366920938463463374607431768211456 out of range for type u128
   ┌─ tests/folding/unfoldable_constants.move:47:25
   │
47 │     const CAST4: u128 = ((340282366920938463463374607431768211456: u256) as u128);
   │                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Cast argument value 65536 out of range for type u16
   ┌─ tests/folding/unfoldable_constants.move:48:24
   │
48 │     const CAST2: u16 = ((65536: u64) as u16);
   │                        ^^^^^^^^^^^^^^^^^^^^^

error: Invalid expression in `const`. Cast argument value 4294967296 out of range for type u32
   ┌─ tests/folding/unfoldable_constants.move:49:24
   │
49 │     const CAST3: u32 = ((4294967296: u128) as u32);
   │                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^
